maquetacion index, visitanos, contacto y aviso legal

--- a/proyecto html/aviso_legal.html
+++ b/proyecto html/aviso_legal.html
@@ -14,55 +14,56 @@
 <body>
     <header class="text-center">
         <nav class="navbar navbar-expand-md lg bg-plaza-norte navbar-dark sticky-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="Imagenes/logoPlaza.jpg" alt="" height="100"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html"><b>INICIO</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="tiendas.html"><b>TIENDAS</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="restaurantes.html"><b>RESTAURANTES</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="ocio.html"><b>OCIO</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="cine.html"><b>CINE</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="visitanos.html"><b>VISÍTANOS</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contacto.html"><b>CONTACTO</b></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="aviso_legal.html"><b>AVISO LEGAL</b></a>
-                    </li>
-                </ul>
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"><img src="Imagenes/logoPlaza.jpg" alt="" height="100"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html"><b>INICIO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="tiendas.html"><b>TIENDAS</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="restaurantes.html"><b>RESTAURANTES</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="ocio.html"><b>OCIO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="cine.html"><b>CINE</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="visitanos.html"><b>VISÍTANOS</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="contacto.html"><b>CONTACTO</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="aviso_legal.html"><b>AVISO
+                                    LEGAL</b></a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
+        </nav>
     </header>
     <article>
-        <section class="acordeon-item">
-            <div class="accordion-item text-center">
+
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
                 <h2 class="accordion-header">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        <h2>AVISO LEGAL</h2>
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        <strong>AVISO LEGAL</strong>
                     </button>
                 </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse"
-                    data-bs-parent="#accordionFlushExample">
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>Las presentes Condiciones Generales de Uso regulan el uso del sitio web www.plazanorte2.com
                             (en adelante, el
@@ -80,7 +81,7 @@
                             los mismos, así como la contratación de servicios y bienes por medio de dicho Sitio Web
                             (todo ello
                             denominado
-                            conjuntamente los “Servicios”). <br>
+                            conjuntamente los “Servicios”). <br><br>
 
                             El Centro Comercial Plaza Norte 2 dispone de los permisos necesarios para su utilización.
                             Cualquier acto de
@@ -92,7 +93,7 @@
                             mediante cualquier medio, requerirá el consentimiento previo y por escrito del Centro
                             Comercial Plaza Norte
                             2.
-                            <br>
+                            <br><br>
 
                             Se entiende por Usuario la persona que acceda, navegue y utilice el Sitio Web, los servicios
                             y/o contenidos
@@ -112,7 +113,7 @@
                             conformidad con la
                             Ley, la moral, las buenas costumbres y el orden público. En particular, a título meramente
                             enunciativo y no
-                            limitativo, se compromete a abstenerse de: <br>
+                            limitativo, se compromete a abstenerse de: <br><br>
 
                         <ul>
                             <li>(a) utilizar el Sitio Web de forma, con fines o efectos contrarios a la ley, a la moral
@@ -146,7 +147,7 @@
                         expuestas
                         así como cualesquiera otras incluidas en las presentes Condiciones Generales y/o las impuestas
                         por la Ley en
-                        relación con la utilización del Sitio Web. <br>
+                        relación con la utilización del Sitio Web. <br><br>
 
                         El Centro Comercial Plaza Norte 2 velará en todo momento por el respeto del ordenamiento
                         jurídico vigente, y
@@ -169,18 +170,14 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="acordeon-item">
-            <div class="accordion-item text-center">
+            <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        <h2>DERECHOS DE PROPIEDAD INTELECTUAL E INDUSTRIAL</h2>
+                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        <strong>DERECHOS DE PROPIEDAD INTELECTUAL E INDUSTRIAL</strong>
                     </button>
                 </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                    data-bs-parent="#accordionFlushExample">
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>El Sitio Web, sus contenidos y derechos de Propiedad Intelectual, la programación y el diseño
                             de la web se
@@ -208,7 +205,7 @@
                             Centro Comercial Plaza Norte 2 recomienda al Usuario leer los mismos atentamente cada vez
                             que acceda al
                             Sitio
-                            Web. <br>
+                            Web. <br><br>
 
                             El Centro Comercial Plaza Norte 2 se reserva expresamente la posibilidad de ejercer las
                             acciones legales
@@ -217,18 +214,14 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="acordeon-item">
-            <div class="accordion-item text-center">
+            <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        <h2>LINKS</h2>
+                        data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <strong>LINKS</strong>
                     </button>
                 </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse"
-                    data-bs-parent="#accordionFlushExample">
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>Los posibles links y contenidos de páginas web de terceros a las que se puede acceder desde
                             este sitio web,
@@ -236,7 +229,7 @@
                             son responsabilidad del Centro Comercial Plaza Norte 2, no pudiendo garantizar que sean
                             exactos en el
                             momento de
-                            acceso del usuario. <br>
+                            acceso del usuario. <br><br>
 
                             El Centro Comercial Plaza Norte 2 no garantiza ni asume ningún tipo de responsabilidad por
                             los daños y
@@ -267,23 +260,19 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-        <section class="acordeon-item">
-            <div class="accordion-item text-center">
+            <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-                        <h2>EXENCIÓN DE RESPONSABILIDAD</h2>
+                        data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <strong>EXENCIÓN DE RESPONSABILIDAD</strong>
                     </button>
                 </h2>
-                <div id="flush-collapseFour" class="accordion-collapse collapse"
-                    data-bs-parent="#accordionFlushExample">
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>En ningún caso el Centro Comercial Plaza Norte 2 será responsable de la producción de
                             cualquier tipo de daño
                             que
-                            los Usuarios o terceros pudiesen ocasionar en el sitio web. <br>
+                            los Usuarios o terceros pudiesen ocasionar en el sitio web. <br><br>
 
                             El Centro Comercial Plaza Norte 2 no será responsable en caso de que existan interrupciones
                             de los
@@ -318,7 +307,7 @@
                             sea cual fuere su
                             causa, el Centro Comercial Plaza Norte 2 no asumirá responsabilidad alguna ya sea por daños
                             directos o
-                            indirectos, daño emergente y/o por lucro cesante. <br>
+                            indirectos, daño emergente y/o por lucro cesante. <br><br>
 
                             El Centro Comercial Plaza Norte 2 excluye cualquier responsabilidad por los daños y
                             perjuicios de toda
@@ -348,7 +337,7 @@
                             salvo
                             los supuestos en que así lo exija la legislación vigente o cuando sea requerido por una
                             Autoridad Judicial o
-                            Administrativa competente. <br>
+                            Administrativa competente. <br><br>
 
                             De igual modo, el Centro Comercial Plaza Norte 2 excluye cualquier responsabilidad por los
                             daños y
@@ -386,19 +375,14 @@
                     </div>
                 </div>
             </div>
-        </section>
-
-
-        <section class="acordeon-item">
-            <div class="accordion-item text-center">
-                <h2 class="accordion-header text">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-                        <h2>LEY APLICABLE Y JURISDICCIÓN</h2>
+                        data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        <strong>LEY APLICABLE Y JURISDICCIÓN</strong>
                     </button>
                 </h2>
-                <div id="flush-collapseFive" class="accordion-collapse collapse"
-                    data-bs-parent="#accordionFlushExample">
+                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
                         <p>Las presentes condiciones generales se rigen por la legislación española. Para conocer de
                             cualquier
@@ -411,8 +395,76 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
     </article>
+
+
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                            class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                            class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                            class="bi bi-facebook fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso
+                            Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
