--- a/proyecto html/prueba.html
+++ b/proyecto html/prueba.html
@@ -10,7 +10,7 @@
 
     <style>
         .bg-plaza-norte {
-            background-color: #003580 !important;
+            background-color: #122942 !important;
         }
     </style>
 
@@ -55,6 +55,66 @@
             </div>
         </div>
     </nav>
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p>Tel: 912 345 678</p>
+                    <p>Email: info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Eventos</a></li>
+                        <li><a href="#" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="#" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
+                    <a href="#" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+                    <a href="#" class="text-white me-3"><i class="bi bi-twitter fs-4"></i></a>
+                    <a href="#" class="text-white"><i class="bi bi-tiktok fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control" placeholder="Tu correo">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-sm">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="#" class="text-white text-decoration-none">Aviso Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
