--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -30,7 +30,8 @@
                             <a class="nav-link" href="tiendas.html"><b>TIENDAS</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="restaurantes.html"><b>RESTAURANTES</b></a>
+                            <a class="nav-link active" aria-current="page"
+                                href="restaurantes.html"><b>RESTAURANTES</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="ocio.html"><b>OCIO</b></a>
@@ -58,21 +59,21 @@
         <section class="row">
             <div class="col">
                 <img src="Imagenes/burguer_king.png" class="img-fluid rounded shadow"
-                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal"
-                    data-bs-target="#tienda1" style="cursor: pointer;">
+                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;"
+                    data-bs-toggle="modal" data-bs-target="#tienda1" style="cursor: pointer;">
             </div>
 
             <div class="col">
                 <img src="Imagenes/dunkin.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda2"
-                    style="cursor: pointer;">
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda2" style="cursor: pointer;">
 
             </div>
 
             <div class="col">
                 <img src="Imagenes/goiko.png" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda3"
-                    style="cursor: pointer;">
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda3" style="cursor: pointer;">
             </div>
 
 
@@ -82,20 +83,21 @@
         <section class="row">
             <div class="col">
                 <img src="Imagenes/macas.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal" data-bs-target="#tienda4" style="cursor: pointer;">
+                    style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal"
+                    data-bs-target="#tienda4" style="cursor: pointer;">
             </div>
 
             <div class="col">
                 <img src="Imagenes/starbucks.webp" class="img-fluid rounded shadow"
-                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
+                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
 
             </div>
 
             <div class="col">
                 <img src="Imagenes/vips.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda6"
-                    style="cursor: pointer;">
+                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda6" style="cursor: pointer;">
             </div>
 
 
@@ -126,9 +128,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.burgerking.es/es/store-locator">Visítanos</a>
-                        </button>
+                        <a href="https://www.burgerking.es/es/store-locator" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
                 </div>
             </div>
@@ -164,9 +167,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.dunkin.es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.dunkin.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -200,9 +204,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.goiko.com/es/provincia/madrid/">Visítanos</a>
-                        </button>
+                        <a href="https://www.goiko.com/es/provincia/madrid/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -237,9 +242,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://mcdonalds.es/">Visítanos</a>
-                        </button>
+                        <a href="https://mcdonalds.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -271,9 +277,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.starbucks.es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.starbucks.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -305,9 +312,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.vips.es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.vips.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -322,6 +330,74 @@
 
     </article>
 
+
+
+
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                            class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                            class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                            class="bi bi-facebook fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso
+                            Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
