--- a/proyecto html/contacto.html
+++ b/proyecto html/contacto.html
@@ -53,30 +53,34 @@
   </header>
 
   <article class="container">
-    <form action="http://www.cursos-diseño.es/mostrar.php" method="post">
-      <div class="mb-3 form-floating col">
-        <input type="text" name="nombre" class="form-control" id="nombre" placeholder="">
-        <label for="nombre">Nombre</label>
-      </div>
-      <div class="mb-3 form-floating col">
-        <input type="text" name="apellidos" class="form-control" id="apellidos" placeholder="">
-        <label for="apellidos">Apellidos</label>
-      </div>
+    <form action="http://www.cursos-diseño.es/mostrar.php" method="post" class="contacto mx-auto" style="max-width: 600px;"
+      onsubmit="return validarCorreos()">
 
-      <div class="mb-3 form-floating col">
-        <input type="text" name="correo" class="form-control" id="correo" placeholder="">
-        <label for="correo">Correo electrónico</label>
-      </div>
+      <div class="row">
+        <div class="mb-3 col-md-6">
+          <input type="text" name="nombre" class="form-control" id="nombre" placeholder="Nombre" required>
+        </div>
 
-      <div class="mb-3 form-floating col">
-        <input type="text" name="telefono" class="form-control" id="telefono" placeholder="">
-        <label for="telefono">Teléfono</label>
+        <div class="mb-3 col-md-6">
+          <input type="text" name="apellidos" class="form-control" id="apellidos" placeholder="Apellidos" required>
+        </div>
       </div>
 
       <div class="mb-3">
-        <textarea name="asunto" type="text" class="form-control" id="asunto" placeholder="Asunto" required></textarea>
+        <input type="email" name="correo" class="form-control" id="correo" placeholder="Correo electrónico" required>
       </div>
 
+      <div class="mb-3">
+        <input type="email" class="form-control" id="confirmarCorreo" placeholder="Confirmar correo electrónico" required>
+      </div>
+
+      <div class="mb-3">
+        <input type="tel" name="telefono" class="form-control" id="telefono" placeholder="Teléfono" required>
+      </div>
+
+      <div class="mb-3">
+        <textarea name="asunto" class="form-control" id="asunto" placeholder="Asunto" required></textarea>
+      </div>
 
       <div class="mb-3">
         <label class="form-check">
@@ -84,6 +88,7 @@
           Acepto los términos y condiciones
         </label>
       </div>
+
       <div class="mb-3">
         <label class="form-check form-switch">
           <input type="checkbox" name="boletin" value="si" class="form-check-input" />
@@ -91,12 +96,87 @@
         </label>
       </div>
 
-
-
-
-      <input type="submit" class="btn btn-primary" />
+      <input type="submit" class="btn btn-primary" value="Enviar" />
     </form>
   </article>
+
+  <script>
+    function validarCorreos() {
+      const correo = document.getElementById('correo').value;
+      const confirmarCorreo = document.getElementById('confirmarCorreo').value;
+
+      if (correo !== confirmarCorreo) {
+        alert('Los correos electrónicos no coinciden.');
+        return false;
+      }
+      return true;
+    }
+  </script>
+
+
+
+  <footer class="bg-dark text-white pt-5 pb-4">
+    <div class="container text-md-left">
+      <div class="row">
+
+        <!-- Contacto -->
+        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+          <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+          <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+          <p><i class="bi bi-telephone"></i> 912 345 678</p>
+          <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+        </div>
+
+        <!-- Enlaces -->
+        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h5 class="text-uppercase fw-bold">Enlaces</h5>
+          <ul class="list-unstyled">
+            <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+            <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+            <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+          </ul>
+        </div>
+
+        <!-- Redes sociales -->
+        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+          <h5 class="text-uppercase fw-bold">Síguenos</h5>
+          <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+              class="bi bi-instagram fs-4"></i></a>
+          <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+              class="bi bi-youtube fs-4"></i></a>
+          <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i class="bi bi-tiktok fs-4"></i></a>
+          <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+              class="bi bi-facebook fs-4"></i></a>
+        </div>
+
+        <!-- Newsletter -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+          <form>
+            <div class="mb-2">
+              <input type="email" class="form-control suscribirme" placeholder="e-mail">
+            </div>
+            <button type="submit" class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+          </form>
+        </div>
+      </div>
+
+      <!-- Línea separadora -->
+      <hr class="mb-3 mt-4 border-light">
+
+      <!-- Avisos legales -->
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p class="mb-0 small">
+            © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso Legal</a> ·
+            <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+            <a href="#" class="text-white text-decoration-none">Cookies</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
