--- a/proyecto html/index.html
+++ b/proyecto html/index.html
@@ -9,6 +9,8 @@
     <title>Proyecto</title>
     <link rel="icon" href="Imagenes/logoPlaza.jpg">
     <link rel="stylesheet" href="style.css">
+    <script src="video.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
 </head>
 
@@ -54,31 +56,44 @@
             </div>
         </nav>
     </header>
-    <article>
-
-        <h1>Bienvenido a Plaza Norte 2 <br>
-            La mayor oferta comercial y de ocio del norte de Madrid</h1>
+    <article id="index">
 
         <!-- Carousel -->
         <div id="demo" class="carousel slide carousel-fade" data-bs-ride="carousel">
 
-            <!-- The slideshow/carousel -->
+            <!-- Slides -->
             <div class="carousel-inner">
-                <div class="carousel-item active">
+                <div class="carousel-item active position-relative">
                     <img src="Imagenes/plaza_norte.webp" class="d-block w-100">
+                    <div class="position-absolute top-0 start-0 w-100 text-center mt-5">
+                        <h1 id="titulo" class="display-1 fw-bold text-shadow">PLAZA NORTE 2</h1>
+                    </div>
+                    <div class="carousel-caption d-none d-md-block bg-plaza-norte bg-opacity-60 rounded p-4">
+                        <h5>"La cúpula de Madrid"</h5>
+                    </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item position-relative">
                     <img src="Imagenes/plaza_norte2.jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-plaza-norte bg-opacity-60 rounded p-4">
+                        <h5>La mayor oferta comercial y de ocio del norte de Madrid</h5>
+                    </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item position-relative">
                     <img src="Imagenes/plaza_norte3.jpg" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-plaza-norte bg-opacity-60 rounded p-4">
+                        <h5>Con la más amplia oferta comercial de moda nacional e internacional en sus más de 200
+                            tiendas</h5>
+                    </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item position-relative">
                     <img src="Imagenes/plaza_norte4.webp" class="d-block w-100">
+                    <div class="carousel-caption d-none d-md-block bg-plaza-norte bg-opacity-60 rounded p-4">
+                        <h5>Con más de 147 000 m² de superficie construida para tu disfrute</h5>
+                    </div>
                 </div>
             </div>
 
-            <!-- Left and right controls/icons -->
+            <!-- Controles -->
             <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon"></span>
             </button>
@@ -86,7 +101,7 @@
                 <span class="carousel-control-next-icon"></span>
             </button>
 
-            <!-- Indicators/dots -->
+            <!-- Indicadores -->
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
@@ -94,10 +109,68 @@
                 <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
             </div>
         </div>
-
-        <video src="Imagenes/videoplazanorte2.mp4"></video>
-
+        <video controls src="Imagenes/videoplazanorte2.mp4"></video>
     </article>
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
