--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -183,6 +183,71 @@
 
 
 
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                            class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                            class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                            class="bi bi-facebook fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso
+                            Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 </body>
 
