--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -60,19 +60,19 @@
 
         <section class="row">
             <div class="col">
-                <img src="Imagenes/zara.jpg" class="img-fluid rounded " data-bs-toggle="modal"
-                    data-bs-target="#tienda1" style="cursor: pointer;">
+                <img src="Imagenes/zara.jpg" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda1"
+                    style="cursor: pointer;">
             </div>
 
             <div class="col">
-                <img src="Imagenes/H&M.jpg" class="img-fluid rounded " class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda2" style="cursor: pointer;">
+                <img src="Imagenes/H&M.jpg" class="img-fluid rounded " class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#tienda2" style="cursor: pointer;">
 
             </div>
 
             <div class="col">
-                <img src="Imagenes/pull&bear" class="img-fluid rounded " class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda3" style="cursor: pointer;">
+                <img src="Imagenes/pull&bear" class="img-fluid rounded " class="btn btn-primary" data-bs-toggle="modal"
+                    data-bs-target="#tienda3" style="cursor: pointer;">
             </div>
 
 
@@ -82,16 +82,19 @@
 
         <section class="row">
             <div class="col">
-                <img src="Imagenes/footLocker" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda4" style="cursor: pointer;">
+                <img src="Imagenes/footLocker" class="img-fluid rounded " data-bs-toggle="modal"
+                    data-bs-target="#tienda4" style="cursor: pointer;">
             </div>
 
             <div class="col">
-                <img src="Imagenes/adidas" class="img-fluid rounded "  data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
+                <img src="Imagenes/adidas" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda5"
+                    style="cursor: pointer;">
 
             </div>
 
             <div class="col">
-                <img src="Imagenes/fnac" class="img-fluid rounded "  data-bs-toggle="modal" data-bs-target="#tienda6" style="cursor: pointer;">
+                <img src="Imagenes/fnac" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda6"
+                    style="cursor: pointer;">
             </div>
 
 
@@ -125,9 +128,11 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.zara.com/es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.zara.com/es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
+
                     </div>
                 </div>
             </div>
@@ -164,10 +169,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a
-                                href="https://www2.hm.com/es_es/index.html?srsltid=AfmBOooRffEuUTJKGgjJKag1PYCDZeYBghO-WGl5HvdMkJg7ibtyKCz8">Visítanos</a>
-                        </button>
+                        <a href="https://www2.hm.com/es_es/index.html?srsltid=AfmBOooRffEuUTJKGgjJKag1PYCDZeYBghO-WGl5HvdMkJg7ibtyKCz8" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -202,9 +207,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.pullandbear.com/es/hombre-n6228">Visítanos</a>
-                        </button>
+                        <a href="https://www.pullandbear.com/es/hombre-n6228" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -243,9 +249,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.footlocker.es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.footlocker.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -281,9 +288,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.adidas.es/">Visítanos</a>
-                        </button>
+                        <a href="https://www.adidas.es/" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -322,10 +330,10 @@
 
                     <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a
-                                href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds">Visítanos</a>
-                        </button>
+                        <a href="https://www.fnac.es/?origin=SEA_GOOG_SEA_BRAND&gad_source=1&gbraid=0AAAAAD8T49WYw8gxSzObFklNeWfKvLiQi&gclid=Cj0KCQjw5azABhD1ARIsAA0WFUHIGA9N6-1jR5hlPii0xIpi1kg6wV_Z429t5uf92hBfUUE4uo1rCkkaAg-LEALw_wcB&gclsrc=aw.ds" target="_blank"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white text-white text-decoration-none">
+                            Visítanos
+                        </a>
                     </div>
 
                 </div>
@@ -348,6 +356,71 @@
 
 
 
+
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
+
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
+
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
+
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                            class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                            class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                            class="bi bi-facebook fs-4"></i></a>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
+
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso
+                            Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
 
