--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -53,111 +53,206 @@
         </nav>
     </header>
 
-    <article id="visitanos">
-        <h2>¿Dónde estamos?</h2>
-        <p>Nos encontramos en San Sebastián de los Reyes, Madrid. Plaza Norte 2 es uno de los centros comerciales más
-            grandes y bonitos de Europa.</p>
 
-        <h2>¿Cómo llegar?</h2>
-        <p>Puedes venir en coche, autobús o tren. Disponemos de un amplio aparcamiento gratuito para todos los
-            visitantes.</p>
+    <main class="bg-light py-5">
+        <div class="container">
+            <h1 class="mb-4 text-center fw-bold text-plaza-norte">Visítanos</h1>
+            <div class="row g-4">
 
-        <h2>Horario</h2>
-        <p>Tiendas: Lunes a Sábado de 10:00 a 22:00.</p>
-        <p>Restauración y ocio: Todos los días de 12:00 a 01:00.</p>
+                <div class="col-md-6">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">¿Dónde estamos?</h5>
+                            <p class="card-text">San Sebastián de los Reyes, Madrid. Plaza Norte 2 es uno de los centros
+                                comerciales más grandes y bonitos de Europa.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">¿Cómo llegar?</h5>
+                            <p class="card-text">En coche, autobús o tren. Parking gratuito disponible para todos los
+                                visitantes.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Horario</h5>
+                            <p><strong>Tiendas:</strong> Lunes a Sábado de 10:00 a 22:00</p>
+                            <p><strong>Restauración y Ocio:</strong> Todos los días de 12:00 a 01:00</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Teléfono</h5>
+                            <p><i class="bi bi-telephone"></i> 916 59 39 67</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Transporte Público</h5>
+                            <p>Línea 10 del Metro hasta "Reyes Católicos", luego L-4 autobús dirección Moscatelares.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Wi-Fi</h5>
+                            <p>De forma gratuita, sin limitaciones y para todos nuestros clientes. Puede conectarse a
+                                nuestra red
+                                *ENJOY-PLAZANORTE2.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Cajero automático</h5>
+                            <p>El centro dispone de varios cajeros repartidos en las dos plantas.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Lavado de coches</h5>
+                            <p>Mima tu coche en Chap.ó!, el primer salón de belleza para el automóvil.</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Club infantil</h5>
+                            <p class="card-text">Títeres, actuaciones y talleres. <br><br>
+                                <strong>Horario:</strong><br>
+                                • Viernes de 17:30 a 20:30 horas. <br>
+                                • Sábados y domingos de 12:00 a 14:00 horas y de 17:30 a 20:30 horas. <br>
+                                • Guiñol: sábados de 12:00 a 14:00 horas. <br>
+                                • Actividades infantiles: sábados por la tarde de 17:30 a 20:15 horas. <br>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="card shadow-sm h-100">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Pet friendly</h5>
+                            <p class="card-text">Plaza Norte 2 es un centro "Pet Friendly", permitiendo la entrada de
+                                animales domésticos bajo las siguientes condiciones: <br>
+                                Los perros deben tener un comportamiento adecuado y si están educados.
+                                Deben ir siempre atados con correa, caminar junto al dueño y no subirse ni atarse al
+                                mobiliario.
+                                Si hacen sus necesidades, el dueño debe limpiarlas de inmediato y
+                                asumir la responsabilidad.
+                                Está prohibido que los perros usen escaleras mecánicas.
+                                Los perros PPP o de más de 10 kg deben llevar bozal y cumplir la normativa vigente.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="card shadow-sm">
+                        <div class="card-body">
+                            <h5 class="card-title text-plaza-norte">Mapa</h5>
+                            <div class="ratio ratio-16x9">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.0110802670233!2d-3.6160852241661767!3d40.5408473714199!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422cde0b7c5567%3A0xabbb242cbe4258e0!2sCentro%20Comercial%20Plaza%20Norte%202!5e1!3m2!1ses!2ses!4v1748532844006!5m2!1ses!2ses"
+                                    width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
-        <h2>Teléfono</h2>
-        <p>916 59 39 67</p>
 
-        <h2>Transporte público</h2>
-        <p>Para llegar a Plaza Norte 2 desde Sanchinarro en transporte público, puedes tomar la línea 10 del Metro de
-            Madrid hasta la parada de "Reyes Católicos". Desde allí, puedes caminar unos 15-20 minutos o tomar la línea
-            L-4 del autobús urbano de San Sebastián de los Reyes, en dirección Moscatelares, que te dejará cerca del
-            centro comercial. </p>
+    <footer class="bg-dark text-white pt-5 pb-4">
+        <div class="container text-md-left">
+            <div class="row">
 
-        <h2>Parking</h2>
-        <p>Más de 6800 plazas de aparcamiento para tu comodidad.
-            Dirección: 28703 San Sebastián de los Reyes, Madrid
-        </p>
+                <!-- Contacto -->
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Plaza Norte 2</h5>
+                    <p>Autovía A-1, salida 19<br>San Sebastián de los Reyes, Madrid</p>
+                    <p><i class="bi bi-telephone"></i> 912 345 678</p>
+                    <p><i class="bi bi-envelope"></i> info@plazanorte2.es</p>
+                </div>
 
-        <h2>Wi-fi</h2>
-        <p>De forma gratuita, sin limitaciones y para todos nuestros clientes. Puede conectarse a nuestra red
-            *ENJOY-PLAZANORTE2. </p>
+                <!-- Enlaces -->
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Enlaces</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="tiendas.html" class="text-white text-decoration-none">Tiendas</a></li>
+                        <li><a href="restaurantes.html" class="text-white text-decoration-none">Restauración</a></li>
+                        <li><a href="contacto.html" class="text-white text-decoration-none">Contacto</a></li>
+                    </ul>
+                </div>
 
+                <!-- Redes sociales -->
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold">Síguenos</h5>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                            class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                            class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                            class="bi bi-facebook fs-4"></i></a>
+                </div>
 
-        <h2>Cajeros automáticos</h2>
-        <p>El centro dispone de varios cajeros repartidos en las dos plantas.</p>
+                <!-- Newsletter -->
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold">Suscríbete</h5>
+                    <form>
+                        <div class="mb-2">
+                            <input type="email" class="form-control suscribirme" placeholder="e-mail">
+                        </div>
+                        <button type="submit"
+                            class="btn btn-primary btn-sm bg-plaza-norte border-white">Suscribirme</button>
+                    </form>
+                </div>
+            </div>
 
-        <h2>Lavado de coches</h2>
-        <p>Mima tu coche en Chap.ó!, el primer salón de belleza para el automóvil.</p>
+            <!-- Línea separadora -->
+            <hr class="mb-3 mt-4 border-light">
 
-        <h2>Club infantil</h2>
-        <p>CLUB INFANTIL PLAZA NORTE 2
-            Títeres, actuaciones y talleres.
+            <!-- Avisos legales -->
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <p class="mb-0 small">
+                        © 2025 Plaza Norte 2 | <a href="aviso_legal.html" class="text-white text-decoration-none">Aviso
+                            Legal</a> ·
+                        <a href="#" class="text-white text-decoration-none">Privacidad</a> ·
+                        <a href="#" class="text-white text-decoration-none">Cookies</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
-
-            Horario:
-            o Viernes de 17:30 a 20:30 horas.
-
-            o Sábados y domingos de 12:00 a 14:00 horas y de 17:30 a 20:30 horas.
-
-
-
-            Guiñol: sábados de 12:00 a 14:00 horas.
-            Actividades infantiles: sábados por la tarde de 17:30 a 20:15 horas.
-
-
-            Normas Club Infantil:
-            Edad para participar: Juegos de 3 a 12 años. Talleres de 4 a 12 años.
-            Es imprescindible ser socio/a del Club Infantil para poder participar.
-            Aforo máximo: 30 participantes. Si el aforo estuviera completo, para participar habrá que esperar turno.
-            Duración de la actividad: 45 minutos.
-            El adulto que acompaña al menor habrá de ser mayor de edad y tendrá que facilitar los siguientes datos a
-            la monitora: Nombre, DNI y número de teléfono móvil. Además, será la misma persona que recoja al menor
-            a la hora indicada, presentando su DNI.
-            El adulto debe estar presente, si desea abandonar la actividad será bajo su responsabilidad.
-            El menor no podrá salir del recinto sin el adulto responsable.
-            Para mayor seguridad y control de los participantes se ruega a los adultos no pasar al recinto.
-            Para estar dentro del espacio es obligatorio descalzarse y el uso de calcetines.
-            Los tiempos de juego en las consolas, la cueva y la mesa multimedia serán establecidos por los monitores.
-            Respeta el mobiliario del Club Infantil. No se podrá acceder al Club Infantil fuera del horario de
-            apertura.
-            La organización del Club Infantil no se hace responsable de ningún objeto perdido o extraviado.
-            No está permitida la entrada al recinto con objetos punzantes o cortantes, comida y/o bebida.
-            Notifica a los monitores cualquier problema o preocupación de forma inmediata. La participación en el Club
-            Infantil supone la aceptación de estas normas.
-            Cumple estas normas para que todas las participantes puedan disfrutar de manera segura y divertida del club
-            Infantil.</p>
-
-        <h2>Pet friendly</h2>
-        <p>Plaza Norte 2 es un centro "Pet Friendly", permitiendo la entrada de animales domésticos bajo las siguientes
-            condiciones:
-
-            Es fundamental que el perro mantenga una conducta adecuada. Evite venir con su mascota si no está
-            perfectamente educada, ladra frecuentemente o es habitual que haga sus necesidades donde no debe.
-            El perro debe ir siempre con correa y caminando junto a su dueño en el suelo, teniendo prohibido subirse al
-            mobiliario o dejarle atado a él.
-            Si su mascota hace sus necesidades en el Centro Comercial, deberá limpiar sus excrementos de inmediato,
-            haciéndose responsable el dueño en el caso de que haya una incidencia como consecuencia de no haber recogido
-            las deposiciones.
-            Por la seguridad de su perro, estará prohibido utilizar las escaleras mecánicas, ya que se puede lesionar.
-            Tal y como marca la legislación, otra norma a tener en cuenta es si su mascota es un perro calificado como
-            potencialmente peligroso (PPP) deben ir, además de sujetos con correa, con bozal y cumplir con todo lo
-            indicado en las normativas vigentes. No obstante a lo anterior, TODOS los perros con peso superior a 10kg,
-            deben ir con correa y bozal.
-            El acceso a los locales comerciales dependerá de la autorización expresa del mismo.
-            En todos los casos se deberá cumplir con las normativas locales, autonómicas y estatales relativas a la
-            tenencia de animales. (Ordenanza reguladora de la tenencia de animales domésticos del Ayuntamiento de San
-            Sebastián de los Reyes.)</p>
-
-        <h2>Mapa</h2>
-        <p>Consulta nuestra ubicación en <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3032.0335748562684!2d-3.6160852246267505!3d40.54084737141985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422cde0b7c5567%3A0xabbb242cbe4258e0!2sCentro%20Comercial%20Plaza%20Norte%202!5e0!3m2!1ses!2ses!4v1745829536689!5m2!1ses!2ses"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-    </article>
 </body>
 
 </html>
