He agregado target

--- a/proyecto html/visitanos.html
+++ b/proyecto html/visitanos.html
@@ -213,13 +213,13 @@
                 <!-- Redes sociales -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h5 class="text-uppercase fw-bold">Síguenos</h5>
-                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3" target="_blank"><i
                             class="bi bi-instagram fs-4"></i></a>
-                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3" target="_blank"><i
                             class="bi bi-youtube fs-4"></i></a>
-                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3" target="_blank"><i
                             class="bi bi-tiktok fs-4"></i></a>
-                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3" target="_blank"><i
                             class="bi bi-facebook fs-4"></i></a>
                 </div>
 
