--- a/proyecto html/prueba.html
+++ b/proyecto html/prueba.html
@@ -81,10 +81,10 @@
                 <!-- Redes sociales -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h5 class="text-uppercase fw-bold">Síguenos</h5>
-                    <a href="#" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
-                    <a href="#" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
-                    <a href="#" class="text-white me-3"><i class="bi bi-twitter fs-4"></i></a>
-                    <a href="#" class="text-white"><i class="bi bi-tiktok fs-4"></i></a>
+                    <a href="#" class="text-white me-3"><i class="bi bi-facebook fs-4" target="_blank"></i></a>
+                    <a href="#" class="text-white me-3"><i class="bi bi-instagram fs-4" target="_blank"></i></a>
+                    <a href="#" class="text-white me-3"><i class="bi bi-twitter fs-4" target="_blank"></i></a>
+                    <a href="#" class="text-white"><i class="bi bi-tiktok fs-4" target="_blank"></i></a>
                 </div>
 
                 <!-- Newsletter -->
