he hecho ocio pero me quedan los videos

--- a/proyecto html/contacto.html
+++ b/proyecto html/contacto.html
@@ -144,7 +144,7 @@
               class="bi bi-instagram fs-4"></i></a>
           <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3" target="_blank"><i
               class="bi bi-youtube fs-4"></i></a>
-          <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i class="bi bi-tiktok fs-4" target="_blank"></i></a>
+          <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3" target="_blank"><i class="bi bi-tiktok fs-4" ></i></a>
           <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3" target="_blank"><i
               class="bi bi-facebook fs-4"></i></a>
         </div>
