--- a/proyecto html/ocio.html
+++ b/proyecto html/ocio.html
@@ -54,132 +54,101 @@
         </nav>
     </header>
 
-    <article>
+    <article class="container my-5">
 
-        <h2>Bolera</h2>
+        <h2 class="mb-4 text-center">Zona de Ocio</h2>
 
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/bolera2.jpg" class="img-fluid rounded" class="img-fluid rounded shadow"
-                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio1" style="cursor: pointer;">
+        <!-- Bolera -->
+        <section class="row mb-5">
+            <div class="col-md-6 offset-md-3 text-center">
+                <img src="Imagenes/bolera2.jpg" class="img-fluid rounded shadow" data-bs-toggle="modal"
+                    data-bs-target="#ocio1" style="cursor: pointer;">
+                <h4 class="mt-3">Bolera</h4>
             </div>
-
-
         </section>
-        <div class="modal" id="ocio1">
-            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
-                <div class="modal-content">
 
-                    <!-- Modal Header -->
+        <div class="modal fade" id="ocio1" tabindex="-1">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
+                <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title"> Bolera</h4>
+                        <h5 class="modal-title">Bolera</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
-
-                    <!-- Modal body -->
                     <div class="modal-body">
-                        <img src="Imagenes/bolera.jpg" controls width="100%" alt="">
-                        <p> <b>Bolera:</b> En este centro comercial, disponemos de una bolera lista para ser usada por
-                            vosotros</p>
+                        <img src="Imagenes/bolera.jpg" class="img-fluid mb-3" alt="Bolera">
+                        <p><strong>Bolera:</strong> En este centro comercial, disponemos de una bolera lista para ser
+                            usada por vosotros.</p>
                     </div>
-
-                    <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://ilusiona.com/" target="_blank">Visítanos</a>
-                        </button>
+                        <a href="https://ilusiona.com/" target="_blank" class="btn btn-success">Visítanos</a>
                     </div>
                 </div>
             </div>
         </div>
 
-
-        <h2>LaserCity</h2>
-
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/LaserCity.png" class="img-fluid rounded" class="img-fluid rounded shadow"
-                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio2" style="cursor: pointer;">
+        <!-- LaserCity -->
+        <!-- LaserCity -->
+        <section class="row mb-5">
+            <div class="col-md-6 offset-md-3 text-center">
+                <img src="Imagenes/LaserCity.png" class="img-fluid rounded shadow" data-bs-toggle="modal"
+                    data-bs-target="#ocio2" style="cursor: pointer; width: 100%; height: 350px; object-fit: cover;">
+                <h4 class="mt-3">LaserCity</h4>
             </div>
-
-
         </section>
 
 
-        <div class="modal" id="ocio2">
-            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+        <div class="modal fade" id="ocio2" tabindex="-1">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
-
-                    <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">LaserCity</h4>
+                        <h5 class="modal-title">LaserCity</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
-
-                    <!-- Modal body -->
                     <div class="modal-body">
-                        <img src="Imagenes/LaserCity2.png" controls width="100%" alt="">
-                        <p> <b>LaserCity:</b> En plaza norte 2 ofrecemos una impresionante experiencia llena de
-                            diversion y locura para disfrutar con tus familiares o amigos, en LaserCity eres el
-                            encargado de hacer que tu equipo gane eliminando al equipo contrario en un escenario lleno
-                            de obstáculos y retos para poder ganar</p>
+                        <img src="Imagenes/LaserCity2.png" class="img-fluid mb-3" alt="LaserCity">
+                        <p><strong>LaserCity:</strong> En Plaza Norte 2 ofrecemos una impresionante experiencia llena de
+                            diversión para disfrutar con tus familiares o amigos. En LaserCity debes liderar a tu equipo
+                            eliminando al contrario en un escenario lleno de obstáculos y retos.</p>
                     </div>
-
-                    <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.lasercity.es/ " target="_blank">Visítanos</a>
-                        </button>
+                        <a href="https://www.lasercity.es/" target="_blank" class="btn btn-success">Visítanos</a>
                     </div>
                 </div>
             </div>
         </div>
 
-
-        <h2>Pista de squi</h2>
-
-
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/skie.jpg" class="img-fluid rounded" class="img-fluid rounded shadow"
-                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ocio3" style="cursor: pointer;">
+        <!-- Pista de ski -->
+        <section class="row mb-5">
+            <div class="col-md-6 offset-md-3 text-center">
+                <img src="Imagenes/skie.jpg" class="img-fluid rounded shadow" data-bs-toggle="modal"
+                    data-bs-target="#ocio3" style="cursor: pointer;">
+                <h4 class="mt-3">Pista de ski</h4>
             </div>
-
-
         </section>
 
-
-        <div class="modal" id="ocio3">
-            <div class="modal-dialog modal-sm modal-dialog-centered modal-lg">
+        <div class="modal fade" id="ocio3" tabindex="-1">
+            <div class="modal-dialog modal-lg modal-dialog-centered">
                 <div class="modal-content">
-
-                    <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">Pista de squi</h4>
+                        <h5 class="modal-title">Pista de ski</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                     </div>
-
-                    <!-- Modal body -->
                     <div class="modal-body">
-                        <img src="Imagenes/squisss.jpg" controls width="100%" alt="">
-                        <p> <b>squi:</b>En el plaza norte 2, disponemos de una enorme pista de squi donde puede esquiar
-                            todo lo que quieras, solo o en familia, disponemos de material suficiente para que todos
-                            vosotros podais llevaros a casa una experiencia inolvidable</p>
+                        <img src="Imagenes/squisss.jpg" class="img-fluid mb-3" alt="Pista de ski">
+                        <p><strong>Pista de ski:</strong> En Plaza Norte 2 disponemos de una enorme pista de ski donde
+                            puedes esquiar todo lo que quieras, solo o en familia. Disponemos de todo el material
+                            necesario para que vivas una experiencia inolvidable.</p>
                     </div>
-
-                    <!-- Modal footer -->
                     <div class="modal-footer">
-                        <button>
-                            <a href="https://www.intuxanadu.com/madrid-snozone/ " target="_blank">Visítanos</a>
-                        </button>
+                        <a href="https://www.intuxanadu.com/madrid-snozone/" target="_blank"
+                            class="btn btn-success">Visítanos</a>
                     </div>
                 </div>
             </div>
         </div>
-
-
 
     </article>
+
 
 
 
@@ -210,8 +179,8 @@
                     <h5 class="text-uppercase fw-bold">Síguenos</h5>
                     <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3" target="_blank"><i
                             class="bi bi-instagram fs-4"></i></a>
-                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3" target="_blank"><i
-                            class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"
+                        target="_blank"><i class="bi bi-youtube fs-4"></i></a>
                     <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3" target="_blank"><i
                             class="bi bi-tiktok fs-4"></i></a>
                     <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3" target="_blank"><i
