tiendas, restaurantes y links redes sociales

--- a/proyecto html/prueba.html
+++ b/proyecto html/prueba.html
@@ -55,6 +55,60 @@
             </div>
         </div>
     </nav>
+
+<article class="container text-center mt-5 mb-5">
+
+        <section class="row justify-content-center">
+            <div class="col-auto me-4">
+                <img src="Imagenes/logotipo-burger-king-2021.webp" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    data-bs-toggle="modal" data-bs-target="#tienda1">
+            </div>
+
+            <div class="col-auto me-4">
+                <img src="Imagenes/dunkin.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda2">
+
+            </div>
+
+            <div class="col-auto">
+                <img src="Imagenes/starbucks.webp" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5">
+
+            </div>
+
+
+
+        </section>
+
+        <section class="row justify-content-center mt-4">
+            <div class="col-auto me-4">
+                <img src="Imagenes/mc6.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;" data-bs-toggle="modal"
+                    data-bs-target="#tienda4">
+            </div>
+
+            <div class="col-auto me-4">
+                <img src="Imagenes/goiko.png" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda3">
+            </div>
+
+            <div class="col-auto">
+                <img src="Imagenes/vips.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;" class="btn btn-primary"
+                    data-bs-toggle="modal" data-bs-target="#tienda6">
+            </div>
+
+
+
+        </section>
+</article>
+
+
+
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-md-left">
             <div class="row">
