--- a/proyecto html/restaurantes.html
+++ b/proyecto html/restaurantes.html
@@ -9,6 +9,7 @@
     <title>Restaurantes</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -54,57 +55,49 @@
         </nav>
     </header>
 
-    <article class="container">
+    <article class="container text-center mt-5 mb-5">
 
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/burguer_king.png" class="img-fluid rounded shadow"
-                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;"
-                    data-bs-toggle="modal" data-bs-target="#tienda1" style="cursor: pointer;">
+        <section class="row justify-content-center">
+            <div class="col-auto me-4">
+                <img src="Imagenes/burger.webp" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    data-bs-toggle="modal" data-bs-target="#tienda1">
             </div>
 
-            <div class="col">
-                <img src="Imagenes/dunkin.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda2" style="cursor: pointer;">
+            <div class="col-auto me-4">
+                <img src="Imagenes/dunkin.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda2">
 
             </div>
 
-            <div class="col">
-                <img src="Imagenes/goiko.png" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda3" style="cursor: pointer;">
-            </div>
-
-
-
-        </section>
-
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/macas.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" data-bs-toggle="modal"
-                    data-bs-target="#tienda4" style="cursor: pointer;">
-            </div>
-
-            <div class="col">
+            <div class="col-auto">
                 <img src="Imagenes/starbucks.webp" class="img-fluid rounded shadow"
-                    class="img-fluid w-100 object-fit-cover" style="height: 200px;  width: 200px; max-width: 100%;"
-                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5" style="cursor: pointer;">
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5">
 
             </div>
-
-            <div class="col">
-                <img src="Imagenes/vips.jpg" class="img-fluid rounded shadow" class="img-fluid w-100 object-fit-cover"
-                    style="height: 200px;  width: 200px; max-width: 100%;" class="btn btn-primary"
-                    data-bs-toggle="modal" data-bs-target="#tienda6" style="cursor: pointer;">
-            </div>
-
-
-
         </section>
 
+        <section class="row justify-content-center mt-4">
+            <div class="col-auto me-4">
+                <img src="Imagenes/macas.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    data-bs-toggle="modal" data-bs-target="#tienda4">
+            </div>
 
+            <div class="col-auto me-4">
+                <img src="Imagenes/goiko.png" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda3">
+            </div>
+
+            <div class="col-auto">
+                <img src="Imagenes/vips.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda6">
+            </div>
+        </section>
 
 
         <!--  Modal Burger King -->
@@ -230,7 +223,7 @@
 
                     <!-- Modal body -->
                     <div class="modal-body">
-                        <img src="Imagenes/TIENDAMACAS" controls width="100%" alt="">
+                        <img src="Imagenes/TIENDAMACAS.jpg" controls width="100%" alt="">
                         <p>McDonald's es una franquicia de restaurantes de comida rápida estadounidense. Sus principales
                             productos son
                             las hamburguesas, las patatas fritas, los menús para el desayuno y los refrescos. También se
@@ -321,13 +314,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
     </article>
 
 
@@ -359,14 +345,10 @@
                 <!-- Redes sociales -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h5 class="text-uppercase fw-bold">Síguenos</h5>
-                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
-                            class="bi bi-instagram fs-4"></i></a>
-                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
-                            class="bi bi-youtube fs-4"></i></a>
-                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
-                            class="bi bi-tiktok fs-4"></i></a>
-                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
-                            class="bi bi-facebook fs-4"></i></a>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
                 </div>
 
                 <!-- Newsletter -->
