--- a/proyecto html/tiendas.html
+++ b/proyecto html/tiendas.html
@@ -9,6 +9,7 @@
     <title>Tiendas</title>
     <link rel="stylesheet" href="Imagenes/logoPlaza.jpg">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -54,51 +55,48 @@
     </header>
 
 
-    <article class="container">
+    <article class="container text-center mt-5 mb-5">
 
-        <!-- Button to Open the Modal -->
-
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/zara.jpg" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda1"
-                    style="cursor: pointer;">
+        <section class="row justify-content-center">
+            <div class="col-auto me-4">
+                <img src="Imagenes/zara.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    data-bs-toggle="modal" data-bs-target="#tienda1">
             </div>
 
-            <div class="col">
-                <img src="Imagenes/H&M.jpg" class="img-fluid rounded " class="btn btn-primary" data-bs-toggle="modal"
-                    data-bs-target="#tienda2" style="cursor: pointer;">
+            <div class="col-auto me-4">
+                <img src="Imagenes/H&M.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda2">
 
             </div>
 
-            <div class="col">
-                <img src="Imagenes/pull&bear" class="img-fluid rounded " class="btn btn-primary" data-bs-toggle="modal"
-                    data-bs-target="#tienda3" style="cursor: pointer;">
+            <div class="col-auto">
+                <img src="Imagenes/pull&bear.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda3">
+
             </div>
-
-
-
         </section>
 
-
-        <section class="row">
-            <div class="col">
-                <img src="Imagenes/footLocker" class="img-fluid rounded " data-bs-toggle="modal"
-                    data-bs-target="#tienda4" style="cursor: pointer;">
+        <section class="row justify-content-center mt-4">
+            <div class="col-auto me-4">
+                <img src="Imagenes/footLocker.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    data-bs-toggle="modal" data-bs-target="#tienda4">
             </div>
 
-            <div class="col">
-                <img src="Imagenes/adidas" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda5"
-                    style="cursor: pointer;">
-
+            <div class="col-auto me-4">
+                <img src="Imagenes/adidas.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda5">
             </div>
 
-            <div class="col">
-                <img src="Imagenes/fnac" class="img-fluid rounded " data-bs-toggle="modal" data-bs-target="#tienda6"
-                    style="cursor: pointer;">
+            <div class="col-auto">
+                <img src="Imagenes/fnac.jpg" class="img-fluid rounded shadow"
+                    style="height: 200px;  width: 200px; max-width: 100%; object-fit: cover; cursor: pointer;"
+                    class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#tienda6">
             </div>
-
-
-
         </section>
 
 
@@ -382,14 +380,10 @@
                 <!-- Redes sociales -->
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                     <h5 class="text-uppercase fw-bold">Síguenos</h5>
-                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i
-                            class="bi bi-instagram fs-4"></i></a>
-                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i
-                            class="bi bi-youtube fs-4"></i></a>
-                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i
-                            class="bi bi-tiktok fs-4"></i></a>
-                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i
-                            class="bi bi-facebook fs-4"></i></a>
+                    <a href="https://www.instagram.com/ccplazanorte2/" class="text-white me-3"><i class="bi bi-instagram fs-4"></i></a>
+                    <a href="https://www.youtube.com/channel/UC64N3tj6EfsPQ41eolvbHbQ" class="text-white me-3"><i class="bi bi-youtube fs-4"></i></a>
+                    <a href="https://www.tiktok.com/@ccplazanorte2" class="text-white me-3"><i class="bi bi-tiktok fs-4"></i></a>
+                    <a href="https://es-es.facebook.com/CCPlazaNorte2" class="text-white me-3"><i class="bi bi-facebook fs-4"></i></a>
                 </div>
 
                 <!-- Newsletter -->
